@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.sf.gnu-hylafax</groupId>
 	<artifactId>gnu-hylafax-inet-ftp</artifactId>
@@ -11,14 +11,12 @@
 		This is an implementation of an FTP Client. We've worked to make this library compliant with the FTP
 		RFC, RFC0959.
 	</description>
-
 	<parent>
 		<groupId>net.sf.gnu-hylafax</groupId>
 		<artifactId>gnu-hylafax</artifactId>
 		<version>1.0.3-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
-
 	<licenses>
 		<license>
 			<name>GNU Lesser General Public License</name>
@@ -26,13 +24,11 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
-
 	<scm>
 		<url>scm:svn:https://gnu-hylafax.svn.sourceforge.net/svnroot/gnu-hylafax/tags/1.0.2</url>
-	  <connection>scm:svn:https://gnu-hylafax.svn.sourceforge.net/svnroot/gnu-hylafax/tags/1.0.2/gnu-hylafax-inet-ftp</connection>
-    <developerConnection>scm:svn:https://gnu-hylafax.svn.sourceforge.net/svnroot/gnu-hylafax/tags/1.0.2/gnu-hylafax-inet-ftp</developerConnection>
-  </scm>
-
+		<connection>scm:svn:https://gnu-hylafax.svn.sourceforge.net/svnroot/gnu-hylafax/tags/1.0.2/gnu-hylafax-inet-ftp</connection>
+		<developerConnection>scm:svn:https://gnu-hylafax.svn.sourceforge.net/svnroot/gnu-hylafax/tags/1.0.2/gnu-hylafax-inet-ftp</developerConnection>
+	</scm>
 	<dependencies>
 		<dependency>
 			<groupId>commons-logging</groupId>
@@ -41,5 +37,4 @@
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
-
 </project>
