@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.sf.gnu-hylafax</groupId>
 	<artifactId>gnu-hylafax</artifactId>
@@ -107,6 +108,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
+				<version>2.0-beta-7</version>
 				<configuration>
 					<port>9000</port>
 					<tempWebappDirectory>${basedir}/target/site/tempdir</tempWebappDirectory>
@@ -189,18 +191,13 @@
 			<organization>MJN Services, Inc.</organization>
 			<organizationUrl>http://www.mjnservices.com</organizationUrl>
 		</developer>
-		<developer>
-			<id>jaiger</id>
-			<name>Joe Phillips</name>
-			<email>jaiger@users.sourceforge.net</email>
-			<roles>
-				<role>Admin</role>
-				<role>Developer</role>
-			</roles>
-			<organization>Innovation Software Group</organization>
-		</developer>
 	</developers>
 	<contributors>
+		<contributor>
+			<name>Joe Phillips</name>
+			<email>jaiger@users.sourceforge.net</email>
+			<organization>Innovation Software Group</organization>
+		</contributor>
 		<contributor>
 			<name>Bernd Proissl</name>
 		</contributor>
